--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@ body{
 h1{
     margin-top:20px;
     font-weight:800;
+    font-size:56px;
+    text-shadow:0 6px 20px rgba(0,0,0,.35);
+}
+
+#evento{
+    font-size:36px;
+    font-weight:600;
+    margin-bottom:15px;
+    color:#ffe082;
+    text-shadow:0 4px 12px rgba(0,0,0,.4);
 }
 
 .pointer{
