--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ body{
 h1{
     margin-top:20px;
     font-weight:800;
-    font-size:clamp(28px, 6vw, 56px);
-    text-shadow:0 6px 20px rgba(0,0,0,.35);
+    font-size:clamp(28px,6vw,56px);
 }
 
 #evento{
@@ -29,7 +28,6 @@ h1{
     font-weight:600;
     margin-bottom:15px;
     color:#ffe082;
-    text-shadow:0 4px 12px rgba(0,0,0,.4);
 }
 
 .pointer{
@@ -39,10 +37,11 @@ h1{
     border-right:18px solid transparent;
     border-top:35px solid white;
     margin:10px auto -15px auto;
-    filter:drop-shadow(0 4px 6px rgba(0,0,0,.4));
 }
 
-canvas#wheel{
+#wheel{
+    width:min(90vw,500px);
+    height:min(90vw,500px);
     border-radius:50%;
     border:12px solid white;
     box-shadow:
@@ -89,240 +88,164 @@ button{
 <div id="contador"></div>
 <div id="historial"></div>
 
-<audio id="tick" src="https://assets.mixkit.co/sfx/preview/mixkit-slot-machine-spin-1930.mp3"></audio>
-<audio id="win" src="https://assets.mixkit.co/sfx/preview/mixkit-winning-chimes-2015.mp3"></audio>
-
 <script>
-
-////////////////////////////////////////////////////
-const params = new URLSearchParams(window.location.search);
-const id = params.get("id") || "demo";
-
-const DATA_URL = `https://raw.githubusercontent.com/diegogallardo87/bingo-data/main/bingos/${id}.json?nocache=${Date.now()}`;
-
-let palabras = [];
-let originales = [];
-let historial = [];
 
 const canvas = document.getElementById("wheel");
 const ctx = canvas.getContext("2d");
 
-let radius;
+let palabras = ["DEMO","RULETA","BINGO","PERSONALIZADO"];
+let originales = [...palabras];
+let historial = [];
+
 let rotation = 0;
-let lastTickIndex = -1;
 let girando = false;
+let radius;
 
 ////////////////////////////////////////////////////
-// RESPONSIVE REAL
+// CANVAS PERFECTAMENTE NÍTIDO
 ////////////////////////////////////////////////////
 
 function resizeCanvas(){
+
     const size = Math.min(window.innerWidth * 0.9, 500);
-    canvas.width = size;
-    canvas.height = size;
-    radius = canvas.width / 2;
+
+    // Tamaño visual
+    canvas.style.width = size + "px";
+    canvas.style.height = size + "px";
+
+    // Escala real según densidad de pantalla
+    const dpr = window.devicePixelRatio || 1;
+    canvas.width = size * dpr;
+    canvas.height = size * dpr;
+
+    ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
+
+    radius = size / 2;
+
+    drawWheel(rotation);
 }
 
-window.addEventListener("resize", ()=>{
-    resizeCanvas();
-    drawWheel(rotation);
-});
+window.addEventListener("resize", resizeCanvas);
+resizeCanvas();
 
-////////////////////////////////////////////////////
-// COLOR DINÁMICO
 ////////////////////////////////////////////////////
 
 function color(i){
     const hue = Math.floor((360 / palabras.length) * i);
-    return `hsl(${hue}, 75%, 60%)`;
+    return `hsl(${hue},75%,60%)`;
 }
 
-////////////////////////////////////////////////////
-// FETCH
-////////////////////////////////////////////////////
-
-fetch(DATA_URL)
-.then(r=>r.json())
-.then(data=>{
-
-    const guardado = localStorage.getItem(id);
-
-    if(guardado){
-        const estado = JSON.parse(guardado);
-        palabras = estado.palabras;
-        historial = estado.historial;
-    }else{
-        palabras = [...data.lista];
-    }
-
-    originales = [...data.lista];
-    document.getElementById("evento").innerText = data.evento || "";
-
-    resizeCanvas();
-    drawWheel(rotation);
-})
-.catch(()=>{
-    palabras = ["DEMO","RULETA","BINGO","PERSONALIZADO"];
-    originales=[...palabras];
-    resizeCanvas();
-    drawWheel(rotation);
-});
-
-////////////////////////////////////////////////////
-// DIBUJAR RULETA
 ////////////////////////////////////////////////////
 
 function drawWheel(rotDeg=0){
 
-if(palabras.length===0) return;
+    if(palabras.length===0) return;
 
-ctx.setTransform(1,0,0,1,0,0);
-ctx.clearRect(0,0,canvas.width,canvas.height);
+    ctx.clearRect(0,0,canvas.width,canvas.height);
 
-ctx.save();
+    ctx.save();
 
-ctx.translate(radius,radius);
-ctx.rotate((rotDeg%360)*Math.PI/180);
-ctx.translate(-radius,-radius);
+    ctx.translate(radius,radius);
+    ctx.rotate((rotDeg%360)*Math.PI/180);
+    ctx.translate(-radius,-radius);
 
-const angle = (2*Math.PI)/palabras.length;
+    const angle = (2*Math.PI)/palabras.length;
 
-palabras.forEach((p,i)=>{
+    palabras.forEach((p,i)=>{
 
-let start = i*angle;
-let end = start + angle;
+        let start = i*angle;
+        let end = start + angle;
 
-ctx.beginPath();
-ctx.moveTo(radius,radius);
-ctx.arc(radius,radius,radius,start,end);
-ctx.fillStyle = color(i);
-ctx.fill();
+        ctx.beginPath();
+        ctx.moveTo(radius,radius);
+        ctx.arc(radius,radius,radius,start,end);
+        ctx.fillStyle = color(i);
+        ctx.fill();
 
-ctx.save();
+        ctx.save();
 
-ctx.translate(radius,radius);
-ctx.rotate(start + angle/2);
+        ctx.translate(radius,radius);
+        ctx.rotate(start + angle/2);
 
-ctx.textAlign="right";
-ctx.fillStyle="#000";
-ctx.strokeStyle="#fff";
-ctx.lineWidth=3;
+        ctx.textAlign="right";
 
-let fontSize = Math.max(14, radius / 12);
-ctx.font=`bold ${fontSize}px Poppins`;
+        // TEXTO NEGRO
+        ctx.fillStyle="#000";
+        ctx.strokeStyle="#fff";
+        ctx.lineWidth=3;
 
-ctx.strokeText(p, radius-20, 8);
-ctx.fillText(p, radius-20, 8);
+        let fontSize = Math.max(14, radius/10);
+        ctx.font=`bold ${fontSize}px Poppins`;
 
-ctx.restore();
+        ctx.strokeText(p, radius-20, 8);
+        ctx.fillText(p, radius-20, 8);
 
-});
+        ctx.restore();
 
-ctx.restore();
+    });
 
-actualizarUI();
+    ctx.restore();
 }
 
-////////////////////////////////////////////////////
-// UI
-////////////////////////////////////////////////////
-
-function actualizarUI(){
-
-document.getElementById("contador").innerText =
-"Quedan "+palabras.length+" palabras";
-
-document.getElementById("historial").innerHTML =
-historial.length
-? "<b>Historial:</b><br>" + historial.join("<br>")
-: "";
-
-localStorage.setItem(id, JSON.stringify({
-palabras,
-historial
-}));
-}
-
-////////////////////////////////////////////////////
-// RULETA
 ////////////////////////////////////////////////////
 
 function spin(){
 
-if(girando) return;
-if(palabras.length===0) return;
+    if(girando) return;
+    if(palabras.length===0) return;
 
-girando=true;
+    girando=true;
 
-const spins = 9 + Math.random()*5;
-const extra = Math.random()*360;
-const finalRotation = rotation + spins*360 + extra;
+    const spins = 8 + Math.random()*4;
+    const extra = Math.random()*360;
+    const finalRotation = rotation + spins*360 + extra;
 
-let start=null;
-const duration=5200;
+    let start=null;
+    const duration=5000;
 
-const tickAudio = document.getElementById("tick");
-tickAudio.currentTime = 0;
-tickAudio.play();
+    function animate(ts){
 
-function animate(ts){
+        if(!start) start=ts;
 
-if(!start) start=ts;
+        let progress = (ts-start)/duration;
+        progress=Math.min(progress,1);
 
-let progress = (ts-start)/duration;
-progress=Math.min(progress,1);
+        let ease = 1-Math.pow(1-progress,4);
+        let current = rotation + (finalRotation-rotation)*ease;
 
-let ease = 1-Math.pow(1-progress,5);
-let current = rotation + (finalRotation-rotation)*ease;
+        drawWheel(current);
 
-drawWheel(current);
+        if(progress<1){
+            requestAnimationFrame(animate);
+        }else{
 
-const slice = 360 / palabras.length;
-let tickIndex = Math.floor(((current%360)+360)%360 / slice);
+            rotation = finalRotation % 360;
 
-if(tickIndex !== lastTickIndex){
-    tickAudio.currentTime=0;
-    tickAudio.play();
-    lastTickIndex = tickIndex;
-}
+            const slice = 360 / palabras.length;
+            const pointerDeg = 270;
 
-if(progress<1){
-requestAnimationFrame(animate);
-}else{
+            let adjusted = (pointerDeg - rotation + 360) % 360;
+            const index = Math.floor(adjusted / slice);
 
-rotation = finalRotation % 360;
+            let ganador = palabras.splice(index,1)[0];
 
-const pointerDeg = 270;
-let adjusted = (pointerDeg - rotation + 360) % 360;
-const index = Math.floor(adjusted / slice);
+            document.getElementById("resultado").innerText =
+            ganador.toUpperCase();
 
-let ganador = palabras.splice(index,1)[0];
-historial.unshift("🎉 "+ganador);
+            girando=false;
+        }
+    }
 
-drawWheel(rotation);
-
-document.getElementById("resultado").innerText=ganador.toUpperCase();
-document.getElementById("win").play();
-
-girando=false;
-}
-}
-
-requestAnimationFrame(animate);
+    requestAnimationFrame(animate);
 }
 
 ////////////////////////////////////////////////////
 
 function resetear(){
-
-palabras=[...originales];
-historial=[];
-localStorage.removeItem(id);
-
-rotation=0;
-
-document.getElementById("resultado").innerText="";
-drawWheel(rotation);
+    palabras=[...originales];
+    rotation=0;
+    document.getElementById("resultado").innerText="";
+    drawWheel(rotation);
 }
 
 </script>
